--- a/projectPikcha/captcha.css
+++ b/projectPikcha/captcha.css
@@ -1,10 +1,10 @@
-.formPikcha {
+.formCaptcha {
     display: none;
     flex-direction: column;
     align-items: center;
     height: 300px;
 }
-.pikcha {
+.captcha {
  display: grid;
  grid-template-columns: repeat(2, 150px);
  grid-template-rows: repeat(2, 150px);
